--- a/packages/docs/src/pages/tokens/font-sizes.stories.mdx
+++ b/packages/docs/src/pages/tokens/font-sizes.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Unstyled } from '@storybook/addon-docs'
 import { TokensGrid } from '../../components/TokensGrid.tsx'
-import { fontSizes } from "@sf-ui/tokens"
+import { fontSizes } from "@sf-digital-ui/tokens"
 
 
 <Meta title="Tokens/Font Sizes" />
