--- a/packages/docs/src/pages/tokens/space.stories.mdx
+++ b/packages/docs/src/pages/tokens/space.stories.mdx
@@ -1,7 +1,6 @@
-import { Meta, Unstyled } from '@storybook/addon-docs'
-import { TokensGrid } from '../../components/TokensGrid.tsx'
-import { space } from "@sf-digital-ui/tokens"
-
+import { Meta, Unstyled } from "@storybook/addon-docs";
+import { TokensGrid } from "../../components/TokensGrid.tsx";
+import { space } from "@sf-digital-ui/tokens";
 
 <Meta title="Tokens/Spaces" />
 
@@ -10,5 +9,5 @@ import { space } from "@sf-digital-ui/tokens"
 These are the spaces used in the design system.
 
 <Unstyled>
-    <TokensGrid tokens={space} hasRemValue />
+  <TokensGrid tokens={space} hasRemValue />
 </Unstyled>
