--- a/packages/docs/src/pages/tokens/radii.stories.mdx
+++ b/packages/docs/src/pages/tokens/radii.stories.mdx
@@ -1,7 +1,6 @@
-import { Meta, Unstyled } from '@storybook/addon-docs'
-import { TokensGrid } from '../../components/TokensGrid.tsx'
-import { radii } from "@sf-digital-ui/tokens"
-
+import { Meta, Unstyled } from "@storybook/addon-docs";
+import { TokensGrid } from "../../components/TokensGrid.tsx";
+import { radii } from "@sf-digital-ui/tokens";
 
 <Meta title="Tokens/Radii" />
 
@@ -10,5 +9,5 @@ import { radii } from "@sf-digital-ui/tokens"
 These are the font wights used in the design system.
 
 <Unstyled>
-    <TokensGrid tokens={radii} />
+  <TokensGrid tokens={radii} />
 </Unstyled>
