feat: add drop shadows

--- a/packages/docs/src/pages/tokens/font-sizes.stories.mdx
+++ b/packages/docs/src/pages/tokens/font-sizes.stories.mdx
@@ -1,7 +1,6 @@
-import { Meta, Unstyled } from '@storybook/addon-docs'
-import { TokensGrid } from '../../components/TokensGrid.tsx'
-import { fontSizes } from "@sf-digital-ui/tokens"
-
+import { Meta, Unstyled } from "@storybook/addon-docs";
+import { TokensGrid } from "../../components/TokensGrid.tsx";
+import { fontSizes } from "@sf-digital-ui/tokens";
 
 <Meta title="Tokens/Font Sizes" />
 
@@ -10,5 +9,5 @@ import { fontSizes } from "@sf-digital-ui/tokens"
 These are the font sizes used in the design system.
 
 <Unstyled>
-    <TokensGrid tokens={fontSizes} hasRemValue />
+  <TokensGrid tokens={fontSizes} hasRemValue />
 </Unstyled>
