--- a/packages/docs/src/pages/home.stories.mdx
+++ b/packages/docs/src/pages/home.stories.mdx
@@ -1,8 +1,6 @@
-import { Meta } from '@storybook/addon-docs'
-
+import { Meta, Unstyled } from "@storybook/addon-docs";
+import HomePage from "../components/HomePage.tsx";
 
 <Meta title="Home" />
 
-# SF UI
-
-Design system for SF
+<HomePage />
