--- a/packages/docs/src/pages/home.stories.mdx
+++ b/packages/docs/src/pages/home.stories.mdx
@@ -1,6 +1,27 @@
-import { Meta, Unstyled } from "@storybook/addon-docs";
-import HomePage from "../components/HomePage.tsx";
+import { Meta } from "@storybook/addon-docs";
+import { themes } from "@storybook/theming";
+
+import HomePage from "../components/HomePage";
 
 <Meta title="Home" />
 
-<HomePage />
+<style>
+  {`
+    .cover{
+        position:absolute;
+        top:0;
+        left:0;
+        height:100vh;
+        width:100vw;
+        z-index:1;
+    }
+    .content{
+        position:relative;
+        z-index:2;
+    }
+    `}
+</style>
+
+<div className="cover">
+  <HomePage />
+</div>
