chore: migrate to pnpm

--- a/packages/docs/src/pages/instructions.stories.mdx
+++ b/packages/docs/src/pages/instructions.stories.mdx
@@ -8,9 +8,9 @@ How to use SF Digital in your project:
 
 ### Installation
 
-**React Components**: `npm install @sf-digital-ui/react`
+**React Components**: `pnpm install @sf-digital-ui/react`
 
-**Colors, Typography and Tokens**: `npm install @sf-digital-ui/tokens`
+**Colors, Typography and Tokens**: `pnpm install @sf-digital-ui/tokens`
 
 ## Configuration
 
