--- a/packages/docs/src/pages/tokens/drop-shadow.mdx
+++ b/packages/docs/src/pages/tokens/drop-shadow.mdx
@@ -1,4 +1,4 @@
-import { Meta, Unstyled } from "@storybook/addon-docs";
+import { Meta, Unstyled } from "@storybook/blocks"
 import { DropShadowGrid } from "../../components/DropShadowGrid.tsx";
 import { fontSizes } from "@sf-digital-ui/tokens";
 
