--- a/packages/docs/src/pages/tokens/fonts.mdx
+++ b/packages/docs/src/pages/tokens/fonts.mdx
@@ -1,4 +1,4 @@
-import { Meta, Unstyled } from '@storybook/addon-docs'
+import { Meta, Unstyled } from "@storybook/blocks"
 import { TokensGrid } from '../../components/TokensGrid.tsx'
 import { fonts } from "@sf-digital-ui/tokens"
 
